tests/NormalTests/paczka2/big_fuzzy/80422717.err
Error in line 8: lsSG3Y A202 51,69
Error in line 4: lsSG3Y S999 64,2
Error in line 1: qyqRTfu S356 69,1
Error in line 19: cu9GBP S999 70,1
Error in line 20: m5ZeWRe A54 11,3
Error in line 32: m5ZeWRe S356 -1,9
Error in line 21: oUHzDm S999 46,0
Error in line 28: rrrb9SxZLi A202 66,3
Error in line 31: m5ZeWRe S356 2,4
Error in line 45: m5ZeWRe S999 12,6
Error in line 48: oUHzDm A202 37,2
Error in line 56: oUHzDm A54 72,7
Error in line 64: rrrb9SxZLi S356 35,4
Error in line 55: lsSG3Y S356 75,8
Error in line 72: rrrb9SxZLi S999 64,9
Error in line 66: lsSG3Y S999 22,7
Error in line 62: S356 S356 55,1
Error in line 74: lsSG3Y A202 28,4
Error in line 79: cu9GBP S999 84,2
Error in line 89: rrrb9SxZLi A202 5,1
Error in line 80: qyqRTfu A54 64,0
Error in line 91: rrrb9SxZLi A54 76,2
Error in line 93: qyqRTfu A202 65,9
Error in line 97: m5ZeWRe A202 68,8
Error in line 109: cu9GBP A54 17,4
Error in line 121: oUHzDm S356 21,2
Error in line 126: oUHzDm A202 49,4
Error in line 127: oUHzDm S356 29,3
Error in line 125: S356 S356 64,4
Error in line 132: m5ZeWRe S999 76,0
Error in line 141: lsSG3Y A202 86,1
Error in line 146: lsSG3Y A54 1,5
Error in line 133: S356 S999 10,8
Error in line 161: S356 A202 295,9
Error in line 159: m5ZeWRe A54 25,0
Error in line 166: m5ZeWRe A202 9,5
Error in line 170: cu9GBP S356 14,5
Error in line 182: cu9GBP A54 159,5
Error in line 176: qyqRTfu A54 5,7
Error in line 189: lsSG3Y A202 66,3
Error in line 188: m5ZeWRe S356 54,8
Error in line 190: rrrb9SxZLi A54 40,9
Error in line 208: m5ZeWRe A54 3,30
Error in line 202: qyqRTfu A202 24,5
Error in line 210: qyqRTfu A54 32,8
Error in line 216: qyqRTfu S999 55,2
Error in line 207: m5ZeWRe A54 23,4
Error in line 220: qyqRTfu A54 98,5
Error in line 226: rrrb9SxZLi A202 87,5
Error in line 240: cu9GBP A202 11,53
Error in line 238: oUHzDm A202 99,6
Error in line 241: oUHzDm A54 6,2
